--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
             <div class="row">
                 <div class="col-md-8 col-xs-12 col-sm-6">
                     <h1>Narcisse Obadiah</h1>
-                    <a href="photo.JPG"> <img src="photo_mini.jpeg" alt="Ceci est mon profil cv"></a>
+                    <img  src="photo_mini.jpeg" alt="Ceci est mon profil cv">
                     <section id="experience">
+                        <p>
+                            Je suis un passionné d'informatique et de Finance, quand je ne suis pas plongé dans mes lignes de codes,  <br>
+                            je passe mon temps à scruter les graphiques boursiers entre les cotations boursières et les nouvelles économiques.
+
+                        </p>
                     <h2>Mon expérience </h2>
                     <ul>
                         <li><strong>Du 1er aout au 1er novembre:</strong> stage pratique au sein de l'entreprise Niger Numérique</li>
